--- a/.gitignore
+++ b/.gitignore
@@ -132,10 +132,10 @@ dmypy.json
 .DS_Store
 
 # cmake file
-source/CMakeFiles
-source/cmake_install.cmake
-source/CMakeCache.txt
-source/Makefile
+CMakeFiles
+cmake_install.cmake
+CMakeCache.txt
+Makefile
 
 # exec
 videocover
